# bigpowers-showcase

./: .gitignore  CLAUDE.md  CONVENTIONS.md  README.md  pyproject.toml
shorty/: __init__.py  __main__.py  cli.py  db.py  models.py  shortener.py
specs/: execution-status.yaml  release-plan.yaml  state.yaml
specs/epics/e01-core-shortener/: epic.yaml
specs/product/: GLOSSARY_LATEST.yaml  SCOPE_LATEST.yaml  VISION_LATEST.yaml
tests/: __init__.py  test_db.py  test_resolve.py  test_shortener.py
