[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shorty"
version = "0.1.0"
description = "A local-first URL shortener CLI"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
]
[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.14",
]
[tool.ruff]
line-length = 100
[tool.ruff.format]
quote-style = "double"
[tool.mypy]
strict = true
[tool.pytest.ini_options]
testpaths = ["tests"]
